# lexer-pascal

./: CMakeLists.txt  LICENSE  README.md
include/lex/: scanner.h  types.h
src/lex/: scanner.cc  types.cc  types.h
test/: main.cc
test/files-pas/: lex1.pas
